[package]
name = "week1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Impls of RSA
rsa = "0.7.2"
rsa-oaep-pss = "1.1.0"


[dev-dependencies]
# Benchmarking
criterion = "0.4.0"

[[bench]]
name = "week1"
harness = false
